successfully fetching data using api key

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@ body {
 } */
 
 /* For Form */
-body{
-  /* background: linear-gradient(#2A00B7,#42006C); */
+/* body{
   background: rgb(40, 40, 134);
-}
+} */
