--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,8 @@ body {
   background: #e2d4ff;
 } */
 
-/* For Form */
-body{
-  /* background: linear-gradient(#2A00B7,#42006C); */
+/* For Form and Movie app */
+/* body{
+  background: linear-gradient(#2A00B7,#42006C);
   background: rgb(40, 40, 134);
-}
+} */
