--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,10 @@ body {
   font-family:"Poppins", sans-serif ;
 }
 
+.pointer{
+  cursor: pointer;
+}
+
 /* For Weather app */
 /* .app{
   min-height: 100vh;
