adding useful content

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
 } */
 
 /* For Form and Movie app */
-/* body{
+body{
   background: linear-gradient(#2A00B7,#42006C);
   background: rgb(40, 40, 134);
-} */
+}
